--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "jquery": "^3.6.0",
         "material-ui-dropzone": "^3.5.0",
         "next": "^11.1.2",
+        "notiflix": "^3.2.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-google-login": "^5.2.2",
